First working version of dynamic paths for pages.