@@ -21,6 +21,7 @@ package org.structr.test.csv.test;
 import io.restassured.RestAssured;
 import io.restassured.filter.log.ResponseLoggingFilter;
 import io.restassured.internal.RestAssuredResponseImpl;
+import java.lang.reflect.InvocationTargetException;
 import org.apache.commons.lang3.StringEscapeUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -91,13 +92,13 @@ public class CsvTest extends StructrCsvTest {
 	public void test01InitServlet() {
 
 		try {
-			final HttpServiceServlet servlet = (HttpServiceServlet) Class.forName(CsvServlet.class.getName()).newInstance();
+			final HttpServiceServlet servlet = (HttpServiceServlet) Class.forName(CsvServlet.class.getName()).getDeclaredConstructor().newInstance();
 
 			assertNotNull(servlet);
 
 			assertTrue(servlet instanceof CsvServlet);
 
-		} catch (ClassNotFoundException | InstantiationException | IllegalAccessException ex) {
+		} catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException | SecurityException | IllegalArgumentException | InvocationTargetException ex) {
 			logger.warn("", ex);
 			fail("Unexcepted exception");
 		}
